--- a/src/App.css
+++ b/src/App.css
@@ -277,8 +277,10 @@ input{
     width: 100%;
     max-width: 250px;
     font-size: 12px;
+    font-weight: 700;
     border-radius: 15px;
-    background: #904eca;
+    background: #A53860;
+    box-shadow: 0 0 8px 3px #bebebe;
     margin: 4px;
     padding: 5px;
     white-space: nowrap;
@@ -292,7 +294,7 @@ input{
     max-width: 250px;
     font-size: 12px;
     border-radius: 15px;
-    background-color: #8b4b9b;
+    background-color: #4C3B4D;
     margin: 4px;
     padding: 5px;
     white-space: nowrap;
@@ -311,6 +313,7 @@ input{
 
 .caja .contercj{
     font-size: 20px;
+    font-weight: 500;
     float: right;
     background-color: #f80057;
     color: #fff;
@@ -345,7 +348,7 @@ input{
 }
 
 .tarea-vencida h1{
-    color: #ffb23e;
+    color: #FFEEDB;
 }
 
 .tarea-vencida h2{
@@ -388,7 +391,7 @@ input{
   }
   
   .modal-content {
-    background: #9a6dc2;
+    background: #ADA8B6;
     padding: 20px;
     border-radius: 20px;
     width: 300px;
@@ -467,9 +470,9 @@ input{
   }
 
   .modal-contenido-perfil {
-    background: #fff;
+    background: #ADA8B6;
     padding: 20px;
-    border-radius: 15px;
+    border-radius: 20px;
     text-align: center;
     width: 300px;
   }
@@ -520,12 +523,17 @@ input{
         width: 100%;
         height: 100%;
     }
+
+    .modal {
+        align-items: baseline;
+        justify-content: center;
+      }
 }
 
 
 
 
-@media (max-width: 550px) {
+@media (max-width: 570px) {
  
     .titulohome{
         text-align: center;
@@ -538,14 +546,15 @@ input{
     }
 
     .contenedor-cajas {
-        grid-template-columns: repeat(auto-fit, minmax(193px, auto));
+        grid-template-columns: repeat(auto-fit, minmax(150px, auto));
     }
 
     .caja {
         width: 100%;
-        max-width: 170px;
+        max-width: 142px;
         font-size: 10px;
     }
+
 
     .titulo-opciones{
         display: flex;
@@ -570,7 +579,7 @@ input{
   
 
 
-@media (max-width: 412px) {
+@media (max-width: 344px) {
     
     .contenedor-cajas {
         grid-template-columns: repeat(auto-fit, minmax(100%, auto));
@@ -580,7 +589,16 @@ input{
         width: 100%;
         max-width: 94%;
         height: 100%;
-        max-height: 150px;
-        font-size: 10px;
+        max-height: 165px;
+        font-size: 9px;
+    }
+
+    .btn-eliminar-tr{
+        padding: 0;
+        margin: 0;
+    }
+
+    .titulohome, .titulohome2{
+        font-size: 30px;
     }
 }
