--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
     height: 100vh;
     overflow: hidden;
     background: url('../public/fondoTKF2.png') no-repeat center center, 
-                linear-gradient(45deg, #440080, #bb4eff);
+                linear-gradient(45deg, #3d0072, #7201d4);
     background-size: cover, 200% 200%;
     background-position: center, center; 
     animation: cambiarColor 3s infinite alternate;
@@ -170,7 +170,7 @@ input{
     align-items: center;
     justify-content: center;
     background: url('../public/fondoTKF2.png') no-repeat center center, 
-                linear-gradient(45deg, #440080, #bb4eff);
+                linear-gradient(45deg, #3d0072, #7201d4);
     background-size: cover, 200% 200%;
     background-position: center, center;
     width: 100%;
@@ -275,23 +275,54 @@ input{
 }
 
 .caja{
-    width: 100%;
-    max-width: 250px;
-    font-size: 12px;
-    font-weight: 700;
-    color: #333;
-    border-radius: 15px;
-    background: #A53860;
-    box-shadow: 0 0 8px 3px #bebebe;
-    margin: 4px;
-    padding: 5px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-height: 300px;
+  width: 100%;
+  max-width: 250px;
+  font-size: 12px;
+  font-weight: 700;
+  color: #66193c;
+  border-radius: 15px;
+  background: #A53860;
+  box-shadow: 0 0 8px 3px #bebebe;
+  margin: 4px;
+  padding: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 300px;
 }
 
-.tarea-vencida {
+.caja h1{
+  color: #f5f5f5;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 220px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.caja h2{
+  color: #66193c;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 800;
+}
+
+.caja span{
+  color: #66193c;
+  font-family: 'Rubik', sans-serif;
+  font-size: 15px;
+  font-weight: 800;
+}
+
+.caja p{
+  font-size: 13px;
+  font-weight: 900;
+  margin-bottom: 0;
+}
+
+.tarea-vencida{
     width: 100%;
     max-width: 250px;
     font-size: 12px;
@@ -303,10 +334,56 @@ input{
     overflow: hidden;
     text-overflow: ellipsis;
     max-height: 300px;
-    color: #ffc266;
+    color: #FFEEDB;
   }
 
+.tarea-vencida h1{
+    color: #ffc266;
+}
 
+.tarea-vencida h2{
+    color: #FFEEDB;
+}
+
+.tarea-vencida span{
+    color: #FFEEDB;
+}
+
+.finalizada{
+  width: 100%;
+  max-width: 250px;
+  font-size: 12px;
+  border-radius: 15px;
+  color: #fff;
+  background-color: #61C9A8;
+  margin: 4px;
+  padding: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 300px;
+}
+
+.finalizada h1{
+  color: #00ffb3;
+}
+
+.finalizada h2{
+  color: #fff;
+}
+
+.finalizada span{
+  color: #fff;
+}
+
+.caja .messagefinalizada{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 20px;
+  color: #00ffb3;
+  font-family: 'Nunito', sans-serif;
+}
 
 
 .caja:hover{
@@ -326,59 +403,50 @@ input{
     justify-content: center;
 }
 
-.caja h1{
-    color: #fff;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 220px;
-    font-family: 'Nunito', sans-serif;
-}
 
-.caja h2{
-    color: #333;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-family: 'Rubik', sans-serif;
-}
 
-.caja span{
-    color: #333;
-    font-family: 'Rubik', sans-serif;
-    font-size: 15px;
-}
-
-.tarea-vencida h1{
-    color: #FFEEDB;
-}
-
-.tarea-vencida h2{
-    color: #ffc266;
-}
-
-.tarea-vencida span{
-    color: #ffc266;
-}
 
 .btn-eliminar-tr{
-    background-color: #f80057;
-    width: 90px;
-    height: 25px;
-    margin: 3px;
-    border: none;
-    border-radius: 5px;
-    color: #fff;
-    font-size: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    float: right;
+  background-color: #f80057;
+  width: 60px;
+  height: 25px;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 10px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  float: right;
 }
 
 .btn-eliminar-tr:hover{
-    background-color: #cf1e5c;
-    transform: scale(1.05);
-    cursor: pointer;
+  background-color: #cf1e5c;
+  transform: scale(1.05);
+  cursor: pointer;
 }
+
+.btn-finalizar-tr{
+  background-color: #19dba1;
+  width: 70px;
+  height: 25px;
+  margin-left: 3px;
+  margin-right: 3px;
+  border: none;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 10px;
+  font-weight: 700;
+  font-family: Arial, Helvetica, sans-serif;
+  float: right;
+}
+
+.btn-finalizar-tr:hover{
+  background-color: #14a076;
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+
 
 .modal {
     position: fixed;
@@ -501,6 +569,7 @@ input{
     margin: 0;
     margin-bottom: 5px;
     color: #333;
+    font-weight: 700;
   }
 
   .modal-contenido-perfil strong{
