--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   color: #fff;
   font-family: 'Nunito', sans-serif;
   font-weight: 900;
-  font-size: 40px;
+  font-size: 55px;
 }
 
 .seccionlinksinicio a{
@@ -136,6 +136,10 @@
     width: 90%;
     margin: 10px auto;
     border-radius: 8px;
+  }
+
+  .titulosredesinicio, .seccion-feedbackinicio p{
+    font-size: 15px;
   }
 }
 
@@ -653,11 +657,12 @@ label {
   }
 
   .modal-content input{
-    display: flex;
-    flex-direction: column;
-    width: 75%;
-    margin-bottom: 4px;
+    margin-bottom: 2%;
     border: none;
+    min-height: 35px;
+    width: 83%;
+    border-radius: 14px;
+    font-family: 'Nunito', sans-serif;
   }
 
   .modal-content select{
@@ -668,7 +673,7 @@ label {
     margin-bottom: 2%;
     border: none;
     min-height: 35px;
-    width: 80%;
+    width: 83%;
     border-radius: 14px;
     font-family: 'Nunito', sans-serif;
   }
@@ -677,7 +682,7 @@ label {
     margin-bottom: 2%;
     border: none;
     min-height: 35px;
-    width: 80%;
+    width: 83%;
     border-radius: 14px;
     font-family: 'Nunito', sans-serif;
   }
